--- a/Serial Vision/Assets/Base.lproj/Main.storyboard
+++ b/Serial Vision/Assets/Base.lproj/Main.storyboard
@@ -40,25 +40,34 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="598"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hBc-fs-ILn" customClass="SerialCodeView" customModule="Serial_Vision" customModuleProvider="target">
-                                <rect key="frame" x="164.5" y="550" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bjM-jt-gk8" customClass="SerialCodeView" customModule="Serial_Vision" customModuleProvider="target">
+                                <rect key="frame" x="166.5" y="559.5" width="42" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eKw-jz-IKZ">
+                                <rect key="frame" x="166.5" y="555" width="42" height="30"/>
                                 <connections>
-                                    <action selector="tapOnSerialNumber:" destination="BYZ-38-t0r" eventType="touchUpInside" id="30K-FF-RsO"/>
+                                    <action selector="tapOnSerialNumber:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yUX-pE-ESE"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="hBc-fs-ILn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TnI-Mm-0Pu"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="hBc-fs-ILn" secondAttribute="bottom" constant="38" id="iV7-PY-UN2"/>
+                            <constraint firstItem="eKw-jz-IKZ" firstAttribute="centerY" secondItem="bjM-jt-gk8" secondAttribute="centerY" id="26V-KZ-mFK"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="bjM-jt-gk8" secondAttribute="bottom" constant="38" id="CFU-0W-xeC"/>
+                            <constraint firstItem="eKw-jz-IKZ" firstAttribute="centerX" secondItem="bjM-jt-gk8" secondAttribute="centerX" id="Mj1-m3-Tem"/>
+                            <constraint firstItem="eKw-jz-IKZ" firstAttribute="width" relation="greaterThanOrEqual" secondItem="bjM-jt-gk8" secondAttribute="width" id="gf7-cj-mJT"/>
+                            <constraint firstItem="bjM-jt-gk8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lO0-30-F10"/>
+                            <constraint firstItem="eKw-jz-IKZ" firstAttribute="height" relation="greaterThanOrEqual" secondItem="bjM-jt-gk8" secondAttribute="height" id="wKm-ya-MyW"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="search" id="M9W-s9-TFO"/>
                     <connections>
                         <outlet property="imageView" destination="db5-50-M4f" id="FZI-Za-SSX"/>
-                        <outlet property="serialButton" destination="hBc-fs-ILn" id="63l-Kg-vQO"/>
+                        <outlet property="resultLabel" destination="bjM-jt-gk8" id="Bvl-Vz-hr8"/>
                         <segue destination="kCj-cC-SnF" kind="show" identifier="FoundSerialSegue" id="byp-3y-F6x"/>
                     </connections>
                 </viewController>
@@ -120,7 +129,7 @@
             </objects>
             <point key="canvasLocation" x="577" y="628"/>
         </scene>
-        <!--Computer Controller-->
+        <!--Title-->
         <scene sceneID="7ES-ik-6yQ">
             <objects>
                 <viewController id="kCj-cC-SnF" customClass="ComputerController" customModule="Serial_Vision" customModuleProvider="target" sceneMemberID="viewController">
@@ -130,6 +139,10 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Yvu-Nv-gJl"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Title" id="Qqq-LW-bo0"/>
+                    <connections>
+                        <outlet property="navigationItem" destination="Qqq-LW-bo0" id="Pcu-TX-HtI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QAr-kI-bq4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -154,6 +167,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="byp-3y-F6x"/>
+        <segue reference="nhq-Uu-AJE"/>
     </inferredMetricsTieBreakers>
 </document>
