--- a/Serial Vision/Assets/Base.lproj/Main.storyboard
+++ b/Serial Vision/Assets/Base.lproj/Main.storyboard
@@ -68,7 +68,7 @@
                     <connections>
                         <outlet property="imageView" destination="db5-50-M4f" id="FZI-Za-SSX"/>
                         <outlet property="resultLabel" destination="bjM-jt-gk8" id="Bvl-Vz-hr8"/>
-                        <segue destination="kCj-cC-SnF" kind="show" identifier="FoundSerialSegue" id="byp-3y-F6x"/>
+                        <segue destination="N1D-fJ-bgL" kind="show" identifier="FoundSerialSegue" id="q9b-Oc-zhx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -132,6 +132,7 @@
         <!--Title-->
         <scene sceneID="7ES-ik-6yQ">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QAr-kI-bq4" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="kCj-cC-SnF" customClass="ComputerController" customModule="Serial_Vision" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="HfU-rK-0mu">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -144,9 +145,24 @@
                         <outlet property="navigationItem" destination="Qqq-LW-bo0" id="Pcu-TX-HtI"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="QAr-kI-bq4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1452" y="627"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="5R8-Jm-Ely">
+            <objects>
+                <navigationController id="N1D-fJ-bgL" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="f6I-bf-QJH">
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="kCj-cC-SnF" kind="relationship" relationship="rootViewController" id="hgM-49-b9l"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0zI-ju-sbq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="577" y="-72"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ts1-w6-6HS">
@@ -167,6 +183,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="nhq-Uu-AJE"/>
+        <segue reference="hgM-49-b9l"/>
     </inferredMetricsTieBreakers>
 </document>
