Starting the history view for storing past scans and navigating down with

--- a/Serial Vision/Assets/Base.lproj/Main.storyboard
+++ b/Serial Vision/Assets/Base.lproj/Main.storyboard
@@ -183,6 +183,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="hgM-49-b9l"/>
+        <segue reference="nhq-Uu-AJE"/>
     </inferredMetricsTieBreakers>
 </document>
